# ai-maestro-plugin

./: .gitignore  .mega-linter.yml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  cliff.toml  fix-log.md  pyproject.toml  validation-report.md  validation-report.txt
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  notify-marketplace.yml  release.yml  validate.yml
commands/: amp-delete.md  amp-download.md  amp-fetch.md  amp-identity.md  amp-inbox.md  amp-init.md  amp-read.md  amp-register.md  amp-reply.md  amp-send.md  amp-status.md  amp-statusline.md
design/requirements/: PRRD.md
hooks/: hooks.json
rules/: memory-protocol.md  trdd-approval-tiers.md  trdd-design-tasks.md
scripts/: agent-commands.sh  agent-core.sh  agent-helper.sh  agent-plugin.sh  ai-maestro-hook.cjs  aimaestro-agent.sh  amp-send.sh  cpv_network_resilience.py  directory-guard.cjs  docs-find-by-type.sh  docs-get.sh  docs-helper.sh  docs-index-delta.sh  docs-index.sh  docs-list.sh  docs-search.sh  docs-stats.sh  export-agent.sh  graph-describe.sh  graph-find-associations.sh  graph-find-by-type.sh  graph-find-callees.sh  graph-find-callers.sh  graph-find-path.sh  graph-find-related.sh  graph-find-serializers.sh  graph-helper.sh  graph-index-delta.sh  import-agent.sh  install-governance-rules.cjs  install-memgrep.sh  lint_files.py  list-agents.sh  mcp-discover.sh  memory-helper.sh  memory-search.sh  publish.py
tests/: README.md  run-all-tests.py  test_cpv_network_resilience.py  test_memory_protocol_components.py  test_prrd_trdd_pillars.py  test_publish_uv_lock_sync.py
(+123 files in other folders)
