[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-maestro-plugin"
version = "2.5.1"
description = "AI agent orchestration plugin for Claude Code"
license = {text = "MIT"}
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]
