[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-maestro-plugin"
version = "2.5.5"
description = "AI agent orchestration plugin for Claude Code"
license = {text = "MIT"}
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.hatch.build.targets.wheel]
# This is a Claude Code plugin, not a Python wheel. The pyproject.toml
# exists only for tool configuration (ruff, pytest, uv). Hatchling needs
# at least one package target to not crash on `uv run`.
packages = ["scripts"]
